// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffView rendering render DiffView w/Patch 1`] = `
<div>
  <div>
    <table
      class="diff diff-unified"
    >
      <colgroup>
        <col
          class="diff-gutter-col"
        />
        <col
          class="diff-gutter-col"
        />
        <col />
      </colgroup>
      <tbody
        class="diff-hunk"
      >
        <tr
          class="diff-line"
        >
          <td
            class="diff-gutter diff-gutter-delete"
          >
            1
          </td>
          <td
            class="diff-gutter diff-gutter-delete"
          />
          <td
            class="diff-code diff-code-delete"
          >
            S
          </td>
        </tr>
        <tr
          class="diff-line"
        >
          <td
            class="diff-gutter diff-gutter-delete"
          >
            2
          </td>
          <td
            class="diff-gutter diff-gutter-delete"
          />
          <td
            class="diff-code diff-code-delete"
          >
            Kernel 
 on an m
          </td>
        </tr>
        <tr
          class="diff-line"
        >
          <td
            class="diff-gutter diff-gutter-delete"
          >
            3
          </td>
          <td
            class="diff-gutter diff-gutter-delete"
          />
          <td
            class="diff-code diff-code-delete"
          >
             
          </td>
        </tr>
        <tr
          class="diff-line"
        >
          <td
            class="diff-gutter diff-gutter-insert"
          />
          <td
            class="diff-gutter diff-gutter-insert"
          >
            1
          </td>
          <td
            class="diff-code diff-code-insert"
          >
            fooo
          </td>
        </tr>
        <tr
          class="diff-line"
        >
          <td
            class="diff-gutter diff-gutter-normal"
          >
            4
          </td>
          <td
            class="diff-gutter diff-gutter-normal"
          >
            2
          </td>
          <td
            class="diff-code diff-code-normal"
          >
            No newline at end of file
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DiffView rendering render DiffView w/oldText & newText 1`] = `
<div>
  <table
    class="diff diff-split"
  >
    <colgroup>
      <col
        class="diff-gutter-col"
      />
      <col />
      <col
        class="diff-gutter-col"
      />
      <col />
    </colgroup>
    <tbody
      class="diff-hunk"
    >
      <tr
        class="diff-line diff-line-compare"
      >
        <td
          class="diff-gutter diff-gutter-delete"
        >
          1
        </td>
        <td
          class="diff-code diff-code-delete"
        >
          hello friend
        </td>
        <td
          class="diff-gutter diff-gutter-insert"
        >
          1
        </td>
        <td
          class="diff-code diff-code-insert"
        >
          hello there friend
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
